--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -11,73 +11,112 @@
   <title> Recetas </title>
 </head>  
 <body>
-    <main>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="./index.html"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                          <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="../pages/Pedidos.html">PEDIDOS</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="../pages/recetas.html">RECETAS</a>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <div class="logo" style="text-align: center;">
-            <h1> <a href="../index.html"> <img src="../fotos/Logo.png" alt="LogoPag" title="EliFerrarosCatering" width="200px"> </a> </h1>   
-        </div> 
-        <div>
-            <p>
-                <p class="info" style="text-align: center;"> Te dejo algunas de mis recetas favoritas!! </p>
-            </p>
+  <main>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="./index.html"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/Pedidos.html">PEDIDOS</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../pages/recetas.html">RECETAS</a>
+          </ul>
         </div>
-        <div class="card-group">
-            <div class="card">
-              <img src="../fotos/foto alfajores.jpg" width="200px" class="card-img-top" alt="ALFAJOR DE MAICENA">
-              <div class="card-body">
-                <h5 class="card-title">ALFAJOR DE MAICENA</h5>
-                <p class="card-text">RECETA: Tamizar la Maizena, la harina, el bicarbonato y el polvo de hornear. En un bowl, batir la manteca con azúcar. Agregar las yemas de a una, mezclando bien. En el mismo bowl, incorporar de a poco los ingredientes secos ya tamizados. Poner esencia de vainilla y ralladura de limón. Estirar la masa hasta que quede espesa, sobre harina. Cortar con molde circular. Formar los alfajores uniéndolos con dulce de leche. Pasarlos por coco rallado.</p>
-              </div>
-            </div>
-            <div class="card">
-              <img src="../fotos/foto volcan chocolate.jpg" class="card-img-top" alt="VOLCÁN DE CHOCOLATE">
-              <div class="card-body">
-                <h5 class="card-title">VOLCÁN DE CHOCOLATE</h5>
-                <p class="card-text">RECETA: Derretimos el chocolate con la manteca. En un bowl batimos los huevos con el azúcar. Incorporamos el chocolate derretido poco a poco y revolvemos. Tamizamos la harina y la añadimos al bowl. Enmantecamos los moldes, los llenamos unas ¾ partes y los congelamos. Los horneamos a 180º C durante 12 minutos. Lo puedes servir con helado de vainilla o crema y frutas de temporada.</p>
-              </div>
-            </div>
-            <div class="card">
-              <img src="../fotos/mousse chocolate.jpg" class="card-img-top" alt="MOUSSE DE CHOCOLATE">
-              <div class="card-body">
-                <h5 class="card-title">MOUSSE DE CHOCOLATE</h5>
-                <p class="card-text">RECETA: Poner el chocolate y la manteca en un bowl y derretirlos en el microondas por dos minutos. Mezclar los ingredientes y poner dos yemas de huevo en el bowl. Poner dos claras de huevo en otro bowl con una pizca de sal. Batir hasta que se haga espuma. Batir con licuadora eléctrica hasta obtener una textura firme. Cuando se enfríe la mezcla de chocolate, ir echándola en varias tandas al bowl con las claras.</p>
-              </div>
-            </div>
-            <div class="card">
-                <img src="../fotos/panqueques.jpg" class="card-img-top" alt="PANQUEQUES DE DDL">
-                <div class="card-body">
-                  <h5 class="card-title">PANQUEQUES DE DDL</h5>
-                  <p class="card-text">RECETA: Batir los huevos e incorporar la leche para batirr ambos juntos. Agregar harina y batir por 5 minutos. Poner en una sartén a fuego medio un cuchadrada de manteca. Vertir una o dos cucharadas de la mezcla sobre la sartén (que cubra toda la superficie de la misma). Cocinar por dos minutos y dar vuelta el panqueque hasta que esté de color dorado.</p>
-                </div>
-              </div>
+      </div>
+    </nav>
+      <div class="logo" style="text-align: center;">
+        <h1> <a href="../index.html"> <img src="../fotos/Logo.png" alt="LogoPag" title="EliFerrarosCatering" width="200px"> </a> </h1>   
+      </div> 
+      <div>
+        <p>
+          <p class="info" style="text-align: center;"> Te dejo algunas de mis recetas favoritas!! </p>
+        </p>
+     </div>
+      <div class="card-group">
+        <div class="card">
+          <img src="../fotos/foto alfajores.jpg" width="200px" class="card-img-top" alt="ALFAJOR DE MAICENA">
+          <div class="card-body">
+            <h5 class="card-title">ALFAJOR DE MAICENA</h5>
+            <p class="card-text">RECETA: Tamizar la Maizena, la harina, el bicarbonato y el polvo de hornear. En un bowl, batir la manteca con azúcar. Agregar las yemas de a una, mezclando bien. En el mismo bowl, incorporar de a poco los ingredientes secos ya tamizados. Poner esencia de vainilla y ralladura de limón. Estirar la masa hasta que quede espesa, sobre harina. Cortar con molde circular. Formar los alfajores uniéndolos con dulce de leche. Pasarlos por coco rallado.</p>
           </div>
-    </main>
-    <footer>
-        <div class="footer">
-            <h4>
-                <p><a href="./recetas_grids.html"> Volver Arriba </a> </p>
-                <p> Seguime en Instagram! <a href="https://www.instagram.com/eliferraroscatering/?hl=es-la"> <img src="../fotos/logoig.png" width="30px">@eliferraroscatering<a></p>
-            </h4>
         </div>
-    </footer>
+        <div class="card">
+          <img src="../fotos/foto volcan chocolate.jpg" class="card-img-top" alt="VOLCÁN DE CHOCOLATE">
+          <div class="card-body">
+            <h5 class="card-title">VOLCÁN DE CHOCOLATE</h5>
+              <p class="card-text">RECETA: Derretimos el chocolate con la manteca. En un bowl batimos los huevos con el azúcar. Incorporamos el chocolate derretido poco a poco y revolvemos. Tamizamos la harina y la añadimos al bowl. Enmantecamos los moldes, los llenamos unas ¾ partes y los congelamos. Los horneamos a 180º C durante 12 minutos. Lo puedes servir con helado de vainilla o crema y frutas de temporada.</p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="../fotos/mousse chocolate.jpg" class="card-img-top" alt="MOUSSE DE CHOCOLATE">
+          <div class="card-body">
+            <h5 class="card-title">MOUSSE DE CHOCOLATE</h5>
+            <p class="card-text">RECETA: Poner el chocolate y la manteca en un bowl y derretirlos en el microondas por dos minutos. Mezclar los ingredientes y poner dos yemas de huevo en el bowl. Poner dos claras de huevo en otro bowl con una pizca de sal. Batir hasta que se haga espuma. Batir con licuadora eléctrica hasta obtener una textura firme. Cuando se enfríe la mezcla de chocolate, ir echándola en varias tandas al bowl con las claras.</p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="../fotos/panqueques.jpg" class="card-img-top" alt="PANQUEQUES DE DDL">
+          <div class="card-body">
+            <h5 class="card-title">PANQUEQUES DE DDL</h5>
+            <p class="card-text">RECETA: Batir los huevos e incorporar la leche para batirr ambos juntos. Agregar harina y batir por 5 minutos. Poner en una sartén a fuego medio un cuchadrada de manteca. Vertir una o dos cucharadas de la mezcla sobre la sartén (que cubra toda la superficie de la misma). Cocinar por dos minutos y dar vuelta el panqueque hasta que esté de color dorado.</p>
+          </div>
+        </div>
+      </div>
+  </main>
+  <footer class="footer" data-store="footer">
+    <div class="container p-top-half visible-when-content-ready">
+      <div class="row">
+        <div class="footer-nav col-sm-2 col-md-2 col-lg-2 m-bottom">
+          <h4 class="footer-title">Navegación</h4>
+          <ul class="p-none">
+            <li class="d-block m-bottom-half-xs">
+              <a class="footer-nav-link" href="/" >Inicio</a>
+           </li>
+           <li class="d-block m-bottom-half-xs">
+              <a class="footer-nav-link" href="../pages/Pedidos.html" >Pedidos</a>
+           </li>
+           <li class="d-block m-bottom-half-xs">
+              <a class="footer-nav-link" href="./recetas.html" >Volver Arriba</a>
+            </li>
+         </ul>
+       </div>
+          <div id="footer-store-contact" class="footer-contact m-bottom col-xs-12 col-sm-4 col-md-4 col-lg-4">
+            <div class="seals-container col-xs-12 col-sm-2 col-md-2 col-lg-2 m-bottom">
+              <h4 class="footer-title">Seguridad y Certificaciones</h4>
+              <a href=""><img src="https://www.afip.gob.ar/images/f960/DATAWEB.jpg" width="50px"></a>
+              <div class="custom-seals-container row">
+                <div class="custom-seal custom-seal-img container-fluid m-bottom-half">
+                  <img src="//d3ugyf2ht6aenh.cloudfront.net/assets/themes/material/static/images/empty-placeholder.png?1339657641" data-src="//d3ugyf2ht6aenh.cloudfront.net/stores/413/750/themes/material/img-816516872-1558892769-263ebf0d8b1bf9d126a5677768cf24961558892769.jpg?1339657641" class="lazyload js-lazy-loading"/>
+                </div>
+              </div>
+           </div>
+          </div>
+       </div>
+       <div class="footer-legal font-small-extra">
+          <div class="container p-top-half p-bottom-half visible-when-content-ready">
+            <div class="row">
+              <div class="powered-by col-sm-4 text-left text-center-xs m-top-half m-bottom-half">
+             </div>
+             <div class="copyright-container col-sm-8 text-right text-center-xs m-top-half m-bottom-half">
+                Copyright EliFerrarosCatering - 2022. Todos los derechos reservados.
+                <div class="claim-link d-inline-block m-left-quarter m-top-half-xs">
+                  Defensa de las y los consumidores. Para reclamos
+                  <a class="weight-strong" href="https://www.argentina.gob.ar/produccion/defensadelconsumidor/formulario" target="_blank">ingrese aquí</a>
+                </div>
+              </div>
+            </div>
+         </div>
+       </div>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
