--- a/pages/Pedidos.html
+++ b/pages/Pedidos.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="../index.html">
-  <meta name="description" content="Mi nombre es Eli Ferraro y disfruto mucho cocinar. Te dejo recetas ricas y divertidas para que intentes en tu casa. También podes encargar cualquier comida que te guste!">
+  <meta name="description" content="Mi nombre es Eli Ferraro y disfruto mucho cocinar. Podes encargar cualquier comida que te guste!">
   <meta name="keywords" content="DULCE, POSTRES, PEDIR, ENCARGAR, CASERO, RECETAS">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
   rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -16,23 +16,23 @@
     <main>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="./index.html"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+            <a class="navbar-brand" href="./index.html"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
           <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../pages/Pedidos.html">PEDIDOS</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../pages/recetas.html">RECETAS</a>
-              </li>
-            </ul>
-          </div>
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../pages/Pedidos.html">PEDIDOS</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../pages/recetas.html">RECETAS</a>
+                  </li>
+                </ul>
+            </div>
         </div>
       </nav>
       <div class="logo" style="text-align: center;">
