--- a/pages/Pedidos.html
+++ b/pages/Pedidos.html
@@ -14,124 +14,114 @@
 </head>  
 <body>
     <main>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="./index.html"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-          <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../pages/Pedidos.html">PEDIDOS</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../pages/recetas.html">RECETAS</a>
-                  </li>
-                </ul>
-            </div>
-        </div>
-      </nav>
-      <div class="logo" style="text-align: center;">
-        <h1> <a href="../index.html"> <img src="../fotos/Logo.png" alt="LogoPag" title="EliFerrarosCatering" width="200px"> </a> </h1>   
-      </div> 
-    <p class="textop" style="text-align: center;">
-        ¡Pedí lo que más te guste completando el siguiente formulario y nos contactaremos con vos!
-    </p> 
-    <section class="form">
-        <form class="row g-3">
-            <div class="col-md-6">
-              <label for="inputEmail4" class="form-label">Email</label>
-              <input type="email" class="form-control" id="inputEmail4">
-            </div>
-            <div class="col-md-6">
-              <label for="inputPassword4" class="form-label">Password</label>
-              <input type="password" class="form-control" id="inputPassword4">
-            </div>
-            <div class="col-12">
-              <label for="inputAddress" class="form-label">Address</label>
-              <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-            </div>
-            <div class="col-12">
-              <label for="inputAddress2" class="form-label">Address 2</label>
-              <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-            </div>
-            <div class="col-md-6">
-              <label for="inputCity" class="form-label">City</label>
-              <input type="text" class="form-control" id="inputCity">
-            </div>
-            <div class="col-md-4">
-                <label for="inputState" class="form-label">State</label>
-                <select id="inputState" class="form-select">
-                    <option selected>Choose...</option>
-                    <option>...</option>
-                </select>
-            </div>
-            <div class="col-md-2">
-              <label for="inputZip" class="form-label">Zip</label>
-              <input type="text" class="form-control" id="inputZip">
-            </div>
-            <div class="col-12">
-              <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="gridCheck">
-                    <label class="form-check-label" for="gridCheck">
-                      Check me out
-                    </label>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="./index.html"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/Pedidos.html">PEDIDOS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/recetas.html">RECETAS</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
-            <div class="col-12">
-              <button type="submit" class="btn btn-primary">Sign in</button>
-            </div>
-        </form>
-    </section>
+        </nav>
+        <div class="logo" style="text-align: center;">
+            <h1> <a href="../index.html"> <img src="../fotos/Logo.png" alt="LogoPag" title="EliFerrarosCatering" width="200px"> </a> </h1>   
+        </div> 
+        <p class="textop">
+            ¡Pedí lo que más te guste completando el siguiente formulario y nos contactaremos con vos!
+        </p> 
+        <section class="form">
+            <form class="row g-3">
+                <div class="row-mb-5">
+                    <label for="nombreyapellido" class="form-label">Nombre y Apellido</label>
+                    <input type="nombreyapellido" class="form-control" id="nombreyapellido">
+                </div>
+                <div class="row-mb-4">
+                  <label for="inputEmail4" class="form-label">Email</label>
+                  <input type="email" class="form-control" id="inputEmail4">
+                </div>
+                <div class="row-mb-4">
+                    <label for="inputtelefono" class="form-label">Teléfono</label>
+                    <input type="telefono" class="form-control" id="inputtelefono">
+                </div>
+                <div class="row-mb-5">
+                  <label for="inputAddress" class="form-label">Dirección</label>
+                  <input type="text" class="form-control" id="inputAddress">
+                </div>
+                <div class="ciudad">
+                    <label for="Ciudad">Ciudad: </label>
+                    <select name="Ciudad" id="">
+                        <option value="none">Selec. Ciudad</option>
+                        <option value="arg">Buenos Aires</option>
+                        <option value="cba">Córdoba</option>
+                        <option value="sfe">Santa Fe</option>
+                    </select>
+                </div>
+                <div class="col-12">
+                  <button type="submit" class="btn btn-primary">PEDIR</button>
+                </div>
+            </form>
+        </section>
+    </main>
+    <hr>
     <footer class="footer" data-store="footer">
         <div class="container p-top-half visible-when-content-ready">
-          <div class="row">
-            <div class="footer-nav col-sm-2 col-md-2 col-lg-2 m-bottom">
-              <h4 class="footer-title" style="font-size: medium;">Navegación</h4>
-              <ul class="p-none">
-                <li class="d-block m-bottom-half-xs">
-                  <a class="footer-nav-link" href="/" style="font-size: small;">Inicio</a>
-               </li>
-               <li class="d-block m-bottom-half-xs">
-                  <a class="footer-nav-link" href="../pages/Pedidos.html" style="font-size: small;">Pedidos</a>
-               </li>
-               <li class="d-block m-bottom-half-xs">
-                  <a class="footer-nav-link" href="./recetas.html" style="font-size: small;">Volver Arriba</a>
-                </li>
-             </ul>
-           </div>
-              <div id="footer-store-contact" class="footer-contact m-bottom col-xs-12 col-sm-4 col-md-4 col-lg-4">
-                <div class="seals-container col-xs-12 col-sm-2 col-md-2 col-lg-2 m-bottom">
-                  <h4 class="footer-title"  style="font-size:medium;">Seguridad y Certificaciones</h4>
-                  <a href=""><img src="https://www.afip.gob.ar/images/f960/DATAWEB.jpg" width="50px"></a>
-                  <div class="custom-seals-container row">
-                    <div class="custom-seal custom-seal-img container-fluid m-bottom-half">
-                      <img src="//d3ugyf2ht6aenh.cloudfront.net/assets/themes/material/static/images/empty-placeholder.png?1339657641" data-src="//d3ugyf2ht6aenh.cloudfront.net/stores/413/750/themes/material/img-816516872-1558892769-263ebf0d8b1bf9d126a5677768cf24961558892769.jpg?1339657641" class="lazyload js-lazy-loading"/>
+            <div class="row">
+                <div class="footer-nav col-sm-2 col-md-2 col-lg-2 m-bottom">
+                    <h4 class="footer-title" style="font-size: medium;">Navegación</h4>
+                    <ul class="p-none">
+                        <li class="d-block m-bottom-half-xs">
+                            <a class="footer-nav-link" style="font-size: small;" href="./pages/Pedidos.html" >Pedidos</a>
+                        </li>
+                        <li class="d-block m-bottom-half-xs">
+                            <a class="footer-nav-link" style="font-size: small;" href="./pages/recetas.html" >Recetas</a>
+                        </li>
+                         <li class="d-block m-bottom-half-xs">
+                            <a class="footer-nav-link" style="font-size: small;" href="./index.html" >Volver Arriba</a>
+                        </li>
+                        <li class="d-block m-bottom-half-xs">
+                          <a class="footer-nav-link" style="font-size: small;" href="https://www.instagram.com/eliferraroscatering/?hl=es-la" >Instagram</a>
+                        </li>
+                    </ul>
+                </div>
+                <div id="footer-store-contact" class="footer-contact m-bottom col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                    <div class="seals-container col-xs-12 col-sm-2 col-md-2 col-lg-2 m-bottom">
+                        <h4 class="footer-title" style="font-size: medium;">Seguridad y Certificaciones</h4>
+                        <img src="https://www.afip.gob.ar/images/f960/DATAWEB.jpg" width="50px">
+                        <div class="custom-seals-container row">
+                           <div class="custom-seal custom-seal-img container-fluid m-bottom-half">
+                                <img src="//d3ugyf2ht6aenh.cloudfront.net/assets/themes/material/static/images/empty-placeholder.png?1339657641" data-src="//d3ugyf2ht6aenh.cloudfront.net/stores/413/750/themes/material/img-816516872-1558892769-263ebf0d8b1bf9d126a5677768cf24961558892769.jpg?1339657641" class="lazyload js-lazy-loading"/>
+                           </div>
+                        </div>
                     </div>
-                  </div>
-               </div>
-              </div>
+                </div>
            </div>
            <div class="footer-legal font-small-extra">
-              <div class="container p-top-half p-bottom-half visible-when-content-ready">
-                <div class="row">
-                  <div class="powered-by col-sm-4 text-left text-center-xs m-top-half m-bottom-half">
-                 </div>
-                 <div class="copyright-container col-sm-8 text-right text-center-xs m-top-half m-bottom-half" style="font-size: medium;">
-                    Copyright EliFerrarosCatering - 2022. Todos los derechos reservados.
-                    <div class="claim-link d-inline-block m-left-quarter m-top-half-xs" style="font-size: medium;">
-                      Defensa de las y los consumidores. Para reclamos
-                      <a class="weight-strong" href="https://www.argentina.gob.ar/produccion/defensadelconsumidor/formulario" target="_blank">ingrese aquí</a>
+                <div class="container p-top-half p-bottom-half visible-when-content-ready">
+                    <div class="row">
+                      <div class="powered-by col-sm-4 text-left text-center-xs m-top-half m-bottom-half">
+                      </div>
+                       <div class="copyright-container col-sm-8 text-right text-center-xs m-top-half m-bottom-half" style="font-size: medium;">
+                           Copyright EliFerrarosCatering - 2022. Todos los derechos reservados.
+                           <div class="claim-link d-inline-block m-left-quarter m-top-half-xs" style="font-size: medium;">
+                                Defensa de las y los consumidores. Para reclamos
+                                <a class="weight-strong" href="https://www.argentina.gob.ar/produccion/defensadelconsumidor/formulario" target="_blank">ingrese aquí</a>
+                            </div>
+                        </div>
                     </div>
-                  </div>
                 </div>
-             </div>
            </div>
-          </div>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
