--- a/pages/confirmado.html
+++ b/pages/confirmado.html
@@ -5,77 +5,42 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="../index.html">
-  <meta name="description" content="Mi nombre es Eli Ferraro y disfruto mucho cocinar. Podes encargar cualquier comida que te guste!">
-  <meta name="keywords" content="DULCE, POSTRES, PEDIR, ENCARGAR, CASERO, RECETAS">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
   rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/estilo.css">
-  <title> Pedidos Eli Ferraro's Catering </title>
+  <title> Confirmación </title>
 </head>  
 <body>
     <main>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="./index.html"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../pages/Pedidos.html">PEDIDOS</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../pages/recetas.html">RECETAS</a>
-                        </li>
-                    </ul>
-                </div>
+              <a class="navbar-brand" href="./index.html"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../pages/Pedidos.html">PEDIDOS</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../pages/recetas.html">RECETAS</a>
+                  </li>
+                </ul>
+              </div>
             </div>
         </nav>
         <div class="logo" style="text-align: center;">
             <h1> <a href="../index.html"> <img src="../fotos/Logo.png" alt="LogoPag" title="EliFerrarosCatering" width="200px"> </a> </h1>   
         </div> 
-        <p class="textop">
-            ¡Pedí lo que más te guste completando el siguiente formulario y nos contactaremos con vos!
-        </p> 
-        <section class="form">
-            <form class="row g-3">
-                <div class="row-mb-5">
-                    <label for="Nombre" class="form-label">Nombre</label>
-                    <input type="nombre" class="form-control" id="nombre">
-                </div>
-                <div class="row-mb-5">
-                    <label for="apellido" class="form-label">Apellido</label>
-                    <input type="pellido" class="form-control" id="apellido">
-                </div>
-                <div class="row-mb-4">
-                  <label for="inputEmail4" class="form-label">Email</label>
-                  <input type="email" class="form-control" id="inputEmail4">
-                </div>
-                <div class="row-mb-4">
-                    <label for="inputtelefono" class="form-label">Teléfono</label>
-                    <input type="telefono" class="form-control" id="inputtelefono">
-                </div>
-                <div class="row-mb-5">
-                  <label for="inputAddress" class="form-label">Dirección</label>
-                  <input type="text" class="form-control" id="inputAddress">
-                </div>
-                <div class="ciudad">
-                    <label for="Ciudad">Ciudad: </label>
-                    <select name="Ciudad" id="">
-                        <option value="none">Selec. Ciudad</option>
-                        <option value="arg">Buenos Aires</option>
-                        <option value="cba">Córdoba</option>
-                        <option value="sfe">Santa Fe</option>
-                    </select>
-                </div>
-                <div class="col-12">
-                  <a href="../pages/confirmado.html"><button type="submit" class="btn btn-primary">PEDIR</button></a>
-                </div>
-            </form>
+        <section class="confirm">
+            <h1> ¡TU PEDIDO FUE REALIZADO CON ÉXITO! </h1>
+            <p class="data"> ¡Gracias por tu compra! Dentro de las próximas 24hrs te estará llegando un correo con los detalles de tu pedido.</h2>
+            <p class="data2"> Nos contactaremos contigo a la brevedad. ¡Muchas gracias!</h2>
+            <p class="empresa"> ELI FERRARO'S CATERING</h3>
         </section>
     </main>
     <hr>
@@ -128,7 +93,5 @@
            </div>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
