--- a/pages/confirmado.html
+++ b/pages/confirmado.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="../index.html">
+  <link rel="icon" href="../fotos/Logo.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
   rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/estilo.css">
@@ -51,16 +51,16 @@
                     <h4 class="footer-title" style="font-size: medium;">Navegación</h4>
                     <ul class="p-none">
                         <li class="d-block m-bottom-half-xs">
-                            <a class="footer-nav-link" style="font-size: small;" href="./pages/Pedidos.html" >Pedidos</a>
-                        </li>
-                        <li class="d-block m-bottom-half-xs">
-                            <a class="footer-nav-link" style="font-size: small;" href="./pages/recetas.html" >Recetas</a>
+                            <a class="footer-nav-link" style="font-size: small;" href="../index.html" >Inicio</a>
                         </li>
                          <li class="d-block m-bottom-half-xs">
-                            <a class="footer-nav-link" style="font-size: small;" href="./index.html" >Volver Arriba</a>
+                            <a class="footer-nav-link" style="font-size: small;" href="./recetas.html" >Recetas</a>
                         </li>
                         <li class="d-block m-bottom-half-xs">
                           <a class="footer-nav-link" style="font-size: small;" href="https://www.instagram.com/eliferraroscatering/?hl=es-la" >Instagram</a>
+                        </li>
+                        <li class="d-block m-bottom-half-xs">
+                            <a class="footer-nav-link" style="font-size: small;" href="./pedidos.html" >Volver a pedir</a>
                         </li>
                     </ul>
                 </div>
