--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="../index.html">
+  <link rel="icon" href="../fotos/Logo.png">
   <meta name="description" content="Mi nombre es Eli Ferraro y disfruto mucho cocinar. Te dejo recetas ricas y divertidas para que intentes en tu casa. También podes encargar cualquier comida que te guste!">
   <meta name="keywords" content="DULCE, POSTRES, PEDIR, ENCARGAR, CASERO, RECETAS">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
