--- a/pages/Pedidos.html
+++ b/pages/Pedidos.html
@@ -38,13 +38,8 @@
         <div class="logo" style="text-align: center;">
             <h1> <a href="../index.html"> <img src="../fotos/Logo.png" alt="LogoPag" title="EliFerrarosCatering" width="200px"> </a> </h1>   
         </div> 
-        <div>
-            <p class="negocio">ELI FERRARO'S CATERING</p>
-            <p class="info" style="text-align: center;"> Mi nombre es Eli Ferraro y disfuto mucho cocinar, en especial cosas dulces. ¡Espero que las disfruten!</p>
-        </div>
-        <p class="textop">
-            ¡Pedí lo que más te guste completando el siguiente formulario y nos contactaremos con vos!
-        </p> 
+        <p class="negocio">ELI FERRARO'S CATERING</p>
+        <p class="textop">¡Pedí lo que más te guste completando el siguiente formulario y nos contactaremos con vos!</p> 
         <section class="form">
             <form class="row g-3">
                 <div class="row-mb-5">
